// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModeSelect adds expected options to select when language is DE 1`] = `
[
  {
    "name": "Herrschaft",
    "value": "Splat Zones",
  },
  {
    "name": "Muschelchaos",
    "value": "Clam Blitz",
  },
  {
    "name": "Operation Goldfisch",
    "value": "Rainmaker",
  },
  {
    "name": "Revierkampf",
    "value": "Turf War",
  },
  {
    "name": "Turmkommando",
    "value": "Tower Control",
  },
  {
    "name": "Unbekannte Kampfart",
    "value": "Unknown Mode",
  },
]
`;

exports[`ModeSelect adds expected options to select when language is EN 1`] = `
[
  {
    "name": "Clam Blitz",
    "value": "Clam Blitz",
  },
  {
    "name": "Rainmaker",
    "value": "Rainmaker",
  },
  {
    "name": "Splat Zones",
    "value": "Splat Zones",
  },
  {
    "name": "Tower Control",
    "value": "Tower Control",
  },
  {
    "name": "Turf War",
    "value": "Turf War",
  },
  {
    "name": "Unknown Mode",
    "value": "Unknown Mode",
  },
]
`;

exports[`ModeSelect adds expected options to select when language is EU_FR 1`] = `
[
  {
    "name": "Défense de zone",
    "value": "Splat Zones",
  },
  {
    "name": "Expédition risquée",
    "value": "Tower Control",
  },
  {
    "name": "Guerre de territoire",
    "value": "Turf War",
  },
  {
    "name": "Mission Bazookarpe",
    "value": "Rainmaker",
  },
  {
    "name": "Mode à déterminer",
    "value": "Unknown Mode",
  },
  {
    "name": "Pluie de palourdes",
    "value": "Clam Blitz",
  },
]
`;
